projectmanager-ingress-GCP.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projectmanager-ingress-resource
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "projectmanager-regional-static-ip"
spec:
  tls:
  - hosts:
    - project-manager.ai
    - www.project-manager.ai
    secretName: projectmanager-tls
  ingressClassName: nginx
  rules:
  - host: project-manager.ai
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: projectmanager
            port:
              number: 8080
  - host: www.project-manager.ai
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: projectmanager
            port:
              number: 8080
